...
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/msg_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="2"
            android:hint="Message" >
        </EditText>
...

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >
            <ImageButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:onClick="create"
                android:src="@drawable/ok" />
        </LinearLayout>
...
