<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_bar" >

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="5dip"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="Reminder" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingRight="10dip"
            android:onClick="onClick"
            android:src="@drawable/cog_wrench"
            android:background="@null" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/btnSettings"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="5dip"
            android:onClick="onClick"
            android:src="@drawable/add"
            android:background="@null" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="5dip"
        android:orientation="vertical" >

        <ListView android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/line"
            android:dividerHeight="3dip"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="#00000000"
            android:drawSelectorOnTop="false" />

        <TextView android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="#777777"
            android:text="No data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="5dip"
            android:paddingRight="10dip"
            android:onClick="onClick"
            android:background="@null"
            android:src="@drawable/left" />

        <TextView
            android:id="@+id/tvDateRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="5dip"
            android:onClick="onClick"
            android:background="@null"
            android:src="@drawable/right" />

    </LinearLayout>

</LinearLayout>