<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dismiss"
        android:id="@+id/bDismiss"
        android:onClick="dismiss"
        android:layout_gravity="center_horizontal" />
</LinearLayout>