<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add event"
        android:layout_gravity="center"
        android:id="@+id/bAdd"
        android:onClick="switchActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display"
        android:layout_gravity="center"
        android:id="@+id/bDisp"
        android:onClick="switchActivity"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personalize"
        android:id="@+id/bPersonalize"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:onClick="switchActivity"/>

</LinearLayout>
